// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - no browser login 1`] = `"[DEV] Pathfinder SSO request approved"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - no browser login 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully approved.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
   <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a href="https://subscribe.developer.gov.bc.ca/" title="SSO Updates Mailing list" target="_blank" rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved BCeID & GitHub prod 1`] = `"[DEV] Pathfinder SSO request approved"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved BCeID & GitHub prod 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully approved.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
  <strong>Next Steps for your integration with BCeID:</strong>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>
   <p><strong>*GitHub production integration is not approved and not ready to use yet</strong></p>
  <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a href="https://subscribe.developer.gov.bc.ca/" title="SSO Updates Mailing list" target="_blank" rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved BCeID prod 1`] = `"[DEV] Pathfinder SSO request approved"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved BCeID prod 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully approved.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
  <strong>Next Steps for your integration with BCeID:</strong>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>
   <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a href="https://subscribe.developer.gov.bc.ca/" title="SSO Updates Mailing list" target="_blank" rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved GitHub prod 1`] = `"[DEV] Pathfinder SSO request approved"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved GitHub prod 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully approved.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
   <p><strong>*GitHub production integration is not approved and not ready to use yet</strong></p>
  <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a href="https://subscribe.developer.gov.bc.ca/" title="SSO Updates Mailing list" target="_blank" rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED 1`] = `"[DEV] Pathfinder SSO request approved"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully approved.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
   <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a href="https://subscribe.developer.gov.bc.ca/" title="SSO Updates Mailing list" target="_blank" rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED - no browser login 1`] = `"[DEV] Pathfinder SSO request submitted & additional important information"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED - no browser login 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
 <p>
  <strong>The expected processing time is 20 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
  <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with BCeID:</strong>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>

  <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with GitHub:</strong>
<p>
  As you've requested an integration with GitHub, any production integration request requires you to obtain an exemption
  to the IM/IT standards.
  <a
    href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/im-it-standards-faqs"
    title="IM/IT Standards Frequently Asked Questions"
    target="_blank"
    rel="noreferrer"
    >IM/IT Standards Frequently Asked Questions</a
  >
</p>
<ol>
  <li>
    Please proceed to complete this form:
    <a
      href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/exemptions"
      title="IIM/IT Standards Exemptions"
      target="_blank"
      rel="noreferrer"
      >IIM/IT Standards Exemptions</a
    >
  </li>
  <li>
    Once the exemption has been granted, please email us with a copy of it and we will happily set you production
    integration with GitHub
  </li>
</ol>
  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED 1`] = `"[DEV] Pathfinder SSO request submitted & additional important information"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development, Test<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 20 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
   <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ BCeID & GitHub 1`] = `"[DEV] Pathfinder SSO request submitted & additional important information"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ BCeID & GitHub 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 20 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
  <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with BCeID:</strong>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>

  <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with GitHub:</strong>
<p>
  As you've requested an integration with GitHub, any production integration request requires you to obtain an exemption
  to the IM/IT standards.
  <a
    href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/im-it-standards-faqs"
    title="IM/IT Standards Frequently Asked Questions"
    target="_blank"
    rel="noreferrer"
    >IM/IT Standards Frequently Asked Questions</a
  >
</p>
<ol>
  <li>
    Please proceed to complete this form:
    <a
      href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/exemptions"
      title="IIM/IT Standards Exemptions"
      target="_blank"
      rel="noreferrer"
      >IIM/IT Standards Exemptions</a
    >
  </li>
  <li>
    Once the exemption has been granted, please email us with a copy of it and we will happily set you production
    integration with GitHub
  </li>
</ol>
  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ BCeID 1`] = `"[DEV] Pathfinder SSO request submitted & additional important information"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ BCeID 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 20 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
  <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with BCeID:</strong>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>

  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ GitHub 1`] = `"[DEV] Pathfinder SSO request submitted & additional important information"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ GitHub 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 20 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
   <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with GitHub:</strong>
<p>
  As you've requested an integration with GitHub, any production integration request requires you to obtain an exemption
  to the IM/IT standards.
  <a
    href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/im-it-standards-faqs"
    title="IM/IT Standards Frequently Asked Questions"
    target="_blank"
    rel="noreferrer"
    >IM/IT Standards Frequently Asked Questions</a
  >
</p>
<ol>
  <li>
    Please proceed to complete this form:
    <a
      href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/exemptions"
      title="IIM/IT Standards Exemptions"
      target="_blank"
      rel="noreferrer"
      >IIM/IT Standards Exemptions</a
    >
  </li>
  <li>
    Once the exemption has been granted, please email us with a copy of it and we will happily set you production
    integration with GitHub
  </li>
</ol>
  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for DELETE_INACTIVE_IDIR_USER 1`] = `"[DEV] In-active IDIR User Removed"`;

exports[`Email template snapshots Should return the expected email for DELETE_INACTIVE_IDIR_USER 2`] = `
"<h3>Dear Pathfinder SSO friend,</h3>
<p>
  The IDIR user with the idir username test-user has an inactive guid in our system. They have been removed from
  client test-client and associated roles test-role
</p>
<p>
  This user was also a Team Admin for your integration, to help ensure a transition to the appropriate admin, please
  contact the Pathfinder SSO team,
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
  with the name of the new admin so we configure for you. Once the Admin is set up, you can remove the Pathfinder SSO
  team as an admin.
</p>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for DELETE_INTEGRATION_SUBMITTED 1`] = `"[DEV] Pathfinder SSO integration ID 1 deleted"`;

exports[`Email template snapshots Should return the expected email for DELETE_INTEGRATION_SUBMITTED 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is deleted.</p>
<p>Below is a summary of your deleted integration:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for PROD_APPROVED w/ BCeID 1`] = `"[DEV] BCeID Request ID 1 approved and being processed"`;

exports[`Email template snapshots Should return the expected email for PROD_APPROVED w/ BCeID 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>
  Your Pathfinder SSO production environment for BCeID <strong>integration request ID 1</strong> has
  been approved.
</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 20 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
 <p>
  Please join the
  <a href="https://subscribe.developer.gov.bc.ca/" title="SSO Updates Mailing list" target="_blank" rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for PROD_APPROVED w/ GitHub 1`] = `"[DEV] GitHub Request ID 1 approved and being processed"`;

exports[`Email template snapshots Should return the expected email for PROD_APPROVED w/ GitHub 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>
  Your Pathfinder SSO production environment for GitHub <strong>integration request ID 1</strong> has
  been approved.
</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 20 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
 <p>
  Please join the
  <a href="https://subscribe.developer.gov.bc.ca/" title="SSO Updates Mailing list" target="_blank" rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for REQUEST_LIMIT_EXCEEDED 1`] = `"[DEV] Pathfinder SSO request limit reached"`;

exports[`Email template snapshots Should return the expected email for REQUEST_LIMIT_EXCEEDED 2`] = `
"<h1>Request Limit Exceeded</h1>
<p>Pathfinder SSO user <strong>test user (#1)</strong> has exceeded their daily limit</p>
"
`;

exports[`Email template snapshots Should return the expected email for TEAM_DELETED 1`] = `"[DEV] Team testteam has been removed by a team admin"`;

exports[`Email template snapshots Should return the expected email for TEAM_DELETED 2`] = `
"<p>testteam has been removed as well as your membership from the team.</p>
<p>
  To view your integrations please
  <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>.
</p>
<p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expected email for TEAM_INVITATION 1`] = `"[DEV] Invitation to join testteam"`;

exports[`Email template snapshots Should return the expected email for TEAM_INVITATION 2`] = `
"<h1>Hello Pathfinder SSO friend,</h1>
<p>You are invited to join <strong>testteam (#1)</strong></p>
<p>
  Please follow this <a href="http://localhost:8080/app/teams/verify?token=https://mysite.com/invitation-link">link</a> to view your invitation in the
  dashboard. This link will expire in <strong>2 business days.</strong>
</p>
<p>
  If you think you're receiving this invitation by accident, or have any questions, please contact the SSO Pathfinder
  team by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or reply to this email
</p>
<p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expected email for TEAM_MEMBER_DELETED_ADMINS 1`] = `"[DEV] Team Admin has modified testteam"`;

exports[`Email template snapshots Should return the expected email for TEAM_MEMBER_DELETED_ADMINS 2`] = `
"<p>A team member <strong>()</strong> has been removed from <strong>testteam</strong>.</p>
<p>
  To view your integrations please
  <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>.
</p>
<p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expected email for TEAM_MEMBER_DELETED_USER_REMOVED 1`] = `"[DEV] Team Admin has modified testteam"`;

exports[`Email template snapshots Should return the expected email for TEAM_MEMBER_DELETED_USER_REMOVED 2`] = `
"<p>A team admin from <strong>testteam</strong> has removed your membership.</p>
<p>
  To view your integrations please
  <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>.
</p>
<p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_APPLIED 1`] = `"[DEV] Pathfinder SSO change request approved and can be downloaded"`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_APPLIED 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO change for integration ID 1 is approved.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
   <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a href="https://subscribe.developer.gov.bc.ca/" title="SSO Updates Mailing list" target="_blank" rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED 1`] = `"[DEV] Pathfinder SSO change request submitted"`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO change request for integration ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development, Test<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 20 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
   <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED w/ BCeID & GitHub 1`] = `"[DEV] Pathfinder SSO change request submitted"`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED w/ BCeID & GitHub 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO change request for integration ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 20 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
  <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with BCeID:</strong>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>

  <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with GitHub:</strong>
<p>
  As you've requested an integration with GitHub, any production integration request requires you to obtain an exemption
  to the IM/IT standards.
  <a
    href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/im-it-standards-faqs"
    title="IM/IT Standards Frequently Asked Questions"
    target="_blank"
    rel="noreferrer"
    >IM/IT Standards Frequently Asked Questions</a
  >
</p>
<ol>
  <li>
    Please proceed to complete this form:
    <a
      href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/exemptions"
      title="IIM/IT Standards Exemptions"
      target="_blank"
      rel="noreferrer"
      >IIM/IT Standards Exemptions</a
    >
  </li>
  <li>
    Once the exemption has been granted, please email us with a copy of it and we will happily set you production
    integration with GitHub
  </li>
</ol>
  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED w/ BCeID 1`] = `"[DEV] Pathfinder SSO change request submitted"`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED w/ BCeID 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO change request for integration ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 20 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
  <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with BCeID:</strong>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>

  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED w/ GitHub 1`] = `"[DEV] Pathfinder SSO change request submitted"`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED w/ GitHub 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO change request for integration ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Identity Providers: </strong>IDIR<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 20 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
   <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with GitHub:</strong>
<p>
  As you've requested an integration with GitHub, any production integration request requires you to obtain an exemption
  to the IM/IT standards.
  <a
    href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/im-it-standards-faqs"
    title="IM/IT Standards Frequently Asked Questions"
    target="_blank"
    rel="noreferrer"
    >IM/IT Standards Frequently Asked Questions</a
  >
</p>
<ol>
  <li>
    Please proceed to complete this form:
    <a
      href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/exemptions"
      title="IIM/IT Standards Exemptions"
      target="_blank"
      rel="noreferrer"
      >IIM/IT Standards Exemptions</a
    >
  </li>
  <li>
    Once the exemption has been granted, please email us with a copy of it and we will happily set you production
    integration with GitHub
  </li>
</ol>
  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;
